manifest/backstage/backstage_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
spec:
  type: ClusterIP
  ports:
    - port: 80          # The port the service is exposed on
      targetPort: 7007  # The port your application is listening on
  selector:
    app: backstage
