manifest/backstage/backstage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  namespace: backstage          
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod   
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:                                                  
  - hosts:
    - kbucci.com
    secretName: backstage-tls
  rules:
  - host: kbucci.com
    http:
      paths:
      - path: /
        pathType: Prefix          
        backend:
          service:
            name: backstage      
            port:
              number: 80
